syntax = "proto3";
package tropicaldog17.wordle.wordle;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "wordle/params.proto";
import "wordle/system_info.proto";
import "wordle/game.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/TropicalDog17/wordle/x/wordle/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/TropicalDog17/wordle/wordle/params";
  }
  // Queries a SystemInfo by index.
	rpc SystemInfo(QueryGetSystemInfoRequest) returns (QueryGetSystemInfoResponse) {
		option (google.api.http).get = "/TropicalDog17/wordle/wordle/system_info";
	}
// Queries a Game by index.
	rpc Game(QueryGetGameRequest) returns (QueryGetGameResponse) {
		option (google.api.http).get = "/TropicalDog17/wordle/wordle/game/{index}";
	}

	// Queries a list of Game items.
	rpc GameAll(QueryAllGameRequest) returns (QueryAllGameResponse) {
		option (google.api.http).get = "/TropicalDog17/wordle/wordle/game";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetSystemInfoRequest {}

message QueryGetSystemInfoResponse {
	SystemInfo SystemInfo = 1 [(gogoproto.nullable) = false];
}
message QueryGetGameRequest {
	  string index = 1;

}

message QueryGetGameResponse {
	Game game = 1 [(gogoproto.nullable) = false];
}

message QueryAllGameRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllGameResponse {
	repeated Game game = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
